frontend/src/Components/CartItems/CartItems.css
.cartitems{
    margin: 100px 170px;
}
.cartitems hr{
    height: 3px;
    background: #e2e2e2;
    border: 0;
}
.cartitems-format-main{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
    align-items: center;
    justify-content: center;
    gap: 75px;
    padding: 20px 0px;
    color: #454545;
    font-size: 18px;
    font-weight: 600;
}
.cartitems-format{
    font-size: 20px;
    font-weight: 500;
    align-items: center;
    justify-content: center;
}
.quantity-control{
    margin-left: 9px;
    display: flex; 
    flex-direction: row;
    align-items: center;
}
.carticon-product-icon{
    height: 100px;
}

.cartitems-modi-icon{
    width: 20px;
    margin: 0px 20px;
    cursor: pointer;
}
.cartitems-quantity{
    align-items: center;
    width: 62px;
    height: 40px;
    border: 2px soild #ebebeb;
    border-radius: 7px;
    background: white;
}
.cartitems-down{
    display: flex;
    margin: 100px 0px;
}
.cartitems-total{
    flex: 1;
    display: flex;
    flex-direction: column;
    margin-right: 200px;
    gap: 40px;
}
.cartitems-total-item{
    display: flex;
    justify-content: space-between;
    padding: 15px 0px;
}
.proceed-div{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.proceed-button{
    background-color: #24831a;
    width: 600px;
    color: white;
    border: none;
    padding: 15px 30px;
    cursor: pointer;
    font-size: 1em;
    border-radius: 75px;
    transition: background-color 0.3s;
}

.dropdowns{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 40px;
    font-size: x-large;
}
.payment-div{
    display: flex;
    flex-direction: row;
    gap: 20px;
}
.delivery-div{
    display: flex;
    flex-direction: row;
    gap: 20px;
}
@media(max-width:1280px) {
    .cartitems-format-main{
        transform: scale(0.8);
    }
    .cartitems-down{
        transform: scale(0.8);
        margin-left: auto;
    }
    
}
@media(max-width:1204px) {
    .cartitems-format-main{
        transform: scale(0.7);
    }
    .cartitems-down{
        transform: scale(0.8);
    }
}
@media(max-width:800px){
    .cartitems-format-main{
        transform: scale(0.6);
    }
    .cartitems-down{
        transform: scale(0.6);
    }
    .cartitems{
        margin: 100px 50px;
    }
}
@media(max-width:600px){
    .cartitems-format-main{
        transform: scale(0.5);
    }
    .cartitems-down{
        transform: scale(0.5);
    }
}

